# gopro-lib-node.gl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.txt  common.mak
debug-tools/: CMakeLists.txt
debug-tools/tools/run_test/: run_test.cpp
libnodegl/: .gitignore  CMakeLists.txt  Makefile  NGLApplication.cpp  NGLApplication.h  android_choreographer.c  android_choreographer.h  api.c  backend.h  backend_gl.c  backend_vk.c  block.c  block.h  buffer.c  buffer.h  buffer_gl.c  buffer_gl.h  buffer_ngfx.cpp  buffer_ngfx.h  buffer_vk.c  buffer_vk.h  capture.h  colorconv.c  colorconv.h  copyfile.py  darray.c  darray.h  default_shaders.c  deserialize.c  dot.c  drawutils.c  drawutils.h  egl.h  fbo.c  fbo.h  feature.h  features.h  format.c  format.h  format_ngfx.cpp  (+148 more)
libnodegl/android/java/: AChoreographer.java
libnodegl/backends/gl/: buffer_gl.c  buffer_gl.h  gctx_gl.c  gctx_gl.h  glcontext.c  glcontext.h  gldefinitions_data.h  glfeatures_data.h  glfunctions.h  glincludes.h  glwrappers.h
libnodegl/backends/ngfx/: buffer_ngfx.cpp  buffer_ngfx.h  debugutil_ngfx.h  format_ngfx.cpp  format_ngfx.h  gctx_ngfx.cpp  gctx_ngfx.h  gtimer_ngfx.cpp  hwupload_videotoolbox_darwin_ngfx.mm  pipeline_ngfx.cpp  pipeline_ngfx.h  program_ngfx.cpp  program_ngfx.h  rendertarget_ngfx.cpp  rendertarget_ngfx.h  surface_util_ngfx.cpp  surface_util_ngfx.h  surface_util_ngfx_d3d.cpp  surface_util_ngfx_mtl.mm  surface_util_ngfx_vk.cpp  swapchain_ngfx.cpp  swapchain_ngfx.h  swapchain_util_ngfx.cpp  swapchain_util_ngfx.h  swapchain_util_ngfx_d3d.cpp  swapchain_util_ngfx_d3d.h  swapchain_util_ngfx_mtl.h  swapchain_util_ngfx_mtl.mm  swapchain_util_ngfx_vk.cpp  swapchain_util_ngfx_vk.h  texture_ngfx.cpp  texture_ngfx.h  topology_ngfx.cpp  topology_ngfx.h  util_ngfx.cpp  util_ngfx.h
libnodegl/backends/vk/: buffer_vk.c  buffer_vk.h  format_vk.c  format_vk.h  gctx_vk.c  gctx_vk.h  hwupload_videotoolbox_darwin_vk.m  mvk_util.h  mvk_util.m  pipeline_vk.c  pipeline_vk.h  program_vk.c  program_vk.h  rendertarget_vk.c  rendertarget_vk.h  texture_vk.c  texture_vk.h  vkcontext.c  vkcontext.h  vkutils.c  vkutils.h
libnodegl/doc/: libnodegl.md
libnodegl/porting/gl/: buffer_gl.c  gctx_gl.c  glcontext_egl.c  gldefinitions_data.h  glfeatures_data.h
libnodegl/porting/ngfx/: buffer_ngfx.cpp  buffer_ngfx.h  format_ngfx.cpp  format_ngfx.h  gctx_ngfx.cpp  gtimer_ngfx.cpp  gtimer_ngfx.h  pipeline_ngfx.cpp  pipeline_ngfx.h  program_ngfx.cpp  program_ngfx.h  rendertarget_ngfx.cpp  rendertarget_ngfx.h  swapchain_ngfx.h  texture_ngfx.cpp  texture_ngfx.h  topology_ngfx.h  util_ngfx.cpp  util_ngfx.h
libnodegl/porting/vk/: buffer_vk.c  pipeline_vk.c  pipeline_vk.h  swapchain_vk.h  texture_vk.c  texture_vk.h  vkcontext.c
libnodegl/src/: animation.h  gctx.h  glimits.h  hmap.h  image.h  log.c  log.h  node_texture.c  nodegl.h  pgcache.h  pipeline.h  program.h  renderdoc_utils.c  transforms.h  utils.c
libnodegl/src/nodegl/: api.c  block.h  hwconv.c  memory.h  node_block.c  node_rtt.c  nodes.h  params.h  pgcraft.c  pgcraft.h  pipeline.c  rendertarget.h  utils.h
libnodegl/tools/capture/: capture.h  mtl_capture.mm  renderdoc_capture.c
libnodegl/tools/renderdoc/: renderdoc_utils.h
ngfx/: CMakeLists.txt  README.md
ngfx/data/shaders/: common.vert.h
ngfx/doc/: LICENSE.txt
ngfx/porting/appkit/: ViewController.h
ngfx/porting/d3d/: D3DBlitOp.cpp  D3DBlitOp.h  D3DBuffer.cpp  D3DBuffer.h  D3DCommandList.cpp  D3DCommandList.h  D3DCommandQueue.cpp  D3DCommandQueue.h  D3DComputePass.h  D3DComputePipeline.cpp  D3DComputePipeline.h  D3DDebugUtil.h  D3DDescriptorHandle.cpp  D3DDescriptorHandle.h  D3DDescriptorHeap.cpp  D3DDescriptorHeap.h  D3DDevice.cpp  D3DDevice.h  D3DFence.cpp  D3DFence.h  D3DFramebuffer.cpp  D3DFramebuffer.h  D3DGraphics.cpp  D3DGraphics.h  D3DGraphicsContext.cpp  D3DGraphicsContext.h  D3DGraphicsPipeline.cpp  D3DGraphicsPipeline.h  D3DPipeline.cpp  D3DPipeline.h  D3DPipelineCache.h  D3DReadbackBuffer.cpp  D3DReadbackBuffer.h  D3DRenderPass.cpp  D3DRenderPass.h  D3DShaderModule.cpp  D3DShaderModule.h  D3DSurface.h  D3DSwapchain.cpp  D3DSwapchain.h  (+3 more)
ngfx/porting/glfw/: GLFWWindow.cpp  GLFWWindow.h
ngfx/porting/metal/: MTLApplication.h  MTLApplication.mm  MTLBuffer.h  MTLBuffer.mm  MTLCommandBuffer.h  MTLComputeCommandEncoder.h  MTLComputePipeline.h  MTLComputePipeline.mm  MTLDevice.h  MTLDevice.mm  MTLFramebuffer.h  MTLFramebuffer.mm  MTLGraphics.h  MTLGraphics.mm  MTLGraphicsContext.h  MTLGraphicsContext.mm  MTLGraphicsCore.h  MTLGraphicsCoreDefines.h  MTLGraphicsPipeline.h  MTLGraphicsPipeline.mm  MTLPipelineCache.h  MTLPipelineUtil.h  MTLPipelineUtil.mm  MTLRenderCommandEncoder.h  MTLRenderPass.h  MTLRenderPass.mm  MTLShaderModule.h  MTLShaderModule.mm  MTLSurface.h  MTLTexture.h  MTLTexture.mm  MTLViewDelegate.mm  MTLWindow.h
ngfx/porting/vulkan/: VKBlit.cpp  VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandPool.cpp  VKComputePipeline.cpp  VKComputePipeline.h  VKDebugUtil.cpp  VKDebugUtil.h  VKDescriptorSetLayoutCache.cpp  VKDevice.cpp  VKDevice.h  VKFence.cpp  VKFence.h  VKFramebuffer.cpp  VKFramebuffer.h  VKGraphics.cpp  VKGraphics.h  VKGraphicsContext.h  VKGraphicsPipeline.cpp  VKGraphicsPipeline.h  VKImage.cpp  VKImage.h  VKImageView.cpp  VKImageView.h  VKInstance.cpp  VKInstance.h  VKPhysicalDevice.cpp  VKPhysicalDevice.h  VKPipeline.cpp  VKPipeline.h  VKPipelineCache.cpp  VKPipelineCache.h  VKQueue.cpp  (+15 more)
ngfx/src/: Application.h  BaseApplication.cpp  BaseApplication.h  FPSCounter.cpp  FPSCounter.h  File.cpp  StringUtil.cpp  Timer.cpp
ngl-debug-tools/: CMakeLists.txt
pyshell/: CMakeLists.txt  pyshell.c  pyshell.cpp
shader-tools/: CMakeLists.txt
shader-tools/scripts/: compile_shaders_dx12.py  compile_shaders_dx12.sh  shader_tools.py
shader-tools/src/: FileUtil.cpp  FileUtil.h  ProcessUtil.cpp  RegexUtil.cpp  RegexUtil.h  ShaderTools.cpp  ShaderTools.h  StringUtil.cpp  StringUtil.h
shader-tools/tests/: compile_shaders_dx12.cpp  compile_shaders_mtl.cpp  compile_shaders_vk.cpp
shader-tools/tools/: compile_shaders_dx12.cpp  compile_shaders_vk.cpp
(+589 files in other folders)
