cmake_minimum_required(VERSION 3.14)
project (nodegl)

file (GLOB_RECURSE NODEGL_SRC_FILES src/nodegl/core/*)

#GPU Capture Options
if (ENABLE_RENDERDOC_CAPTURE)
    file (GLOB_RECURSE CAPTURE_SRC_FILES tools/capture/porting/renderdoc/*)
    list (APPEND NODEGL_SRC_FILES ${CAPTURE_SRC_FILES})
    set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DENABLE_CAPTURE)
elseif (ENABLE_METAL_CAPTURE)
    file (GLOB_RECURSE CAPTURE_SRC_FILES tools/capture/porting/metal/*)
    list (APPEND NODEGL_SRC_FILES ${CAPTURE_SRC_FILES})
    set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DENABLE_CAPTURE)
endif()

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${NODEGL_SRC_FILES})

set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -fPIC -g)

#Backend Configuration
set (NODEGL_ENABLE_NGFX_BACKEND on)
if ( ${CMAKE_SYSTEM_NAME} MATCHES "Linux")
set (NODEGL_ENABLE_GL_BACKEND on)
set (NODEGL_ENABLE_VK_BACKEND on)
endif()

if (NODEGL_ENABLE_NGFX_BACKEND)
    set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DBACKEND_NGFX)
    file (GLOB_RECURSE NODEGL_NGFX_BACKEND_SRC_FILES src/nodegl/porting/ngfx/*)
    source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${NODEGL_NGFX_BACKEND_SRC_FILES})
    set (NODEGL_NGFX_BACKEND_LIBRARIES ${NGFX_LIBRARIES})
endif()
if (NODEGL_ENABLE_GL_BACKEND)
    file (GLOB_RECURSE NODEGL_GL_BACKEND_SRC_FILES src/nodegl/porting/gl/*)
    set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DBACKEND_GL)
    source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${NODEGL_GL_BACKEND_SRC_FILES})
    if ( ${CMAKE_SYSTEM_NAME} MATCHES "Linux")
        file (GLOB_RECURSE NODEGL_GL_BACKEND_EGL_SRC_FILES src/nodegl/porting/egl/*)
        list (APPEND NODEGL_GL_BACKEND_SRC_FILES ${NODEGL_GL_BACKEND_EGL_SRC_FILES})
        set (NODEGL_GL_BACKEND_LIBRARIES ${NODEGL_GL_BACKEND_LIBRARIES} ${GL_LIBRARIES})
    endif()
endif()
if (NODEGL_ENABLE_VK_BACKEND)
    file (GLOB_RECURSE NODEGL_VK_BACKEND_SRC_FILES src/nodegl/porting/vk/*)
    set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DBACKEND_VK)
    source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${NODEGL_VK_BACKEND_SRC_FILES})
    set (NODEGL_VK_BACKEND_LIBRARIES ${VULKANSDK_LIBRARIES} ${SHADERC_LIBRARIES})
    set (NODEGL_VK_BACKEND_LIBRARY_DIRS ${VULKANSDK_LIBRARY_DIRS})
endif()

if ( ${CMAKE_SYSTEM_NAME} MATCHES "Linux") 
set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DHAVE_GLPLATFORM_EGL -DTARGET_LINUX)
set(NODEGL_BUILD_TYPE SHARED)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DHAVE_GLPLATFORM_WGL -DTARGET_WINDOWS)
set(NODEGL_BUILD_TYPE STATIC)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
set (NODEGL_CFLAGS ${NODEGL_CFLAGS} -DTARGET_DARWIN)
set(NODEGL_BUILD_TYPE SHARED)
endif()

add_library(nodegl ${NODEGL_BUILD_TYPE} ${NODEGL_SRC_FILES}
    ${NODEGL_NGFX_BACKEND_SRC_FILES}
    ${NODEGL_GL_BACKEND_SRC_FILES}
    ${NODEGL_VK_BACKEND_SRC_FILES}
)
target_compile_options(nodegl PUBLIC ${NODEGL_CFLAGS} ${NGFX_CFLAGS})

target_link_libraries(nodegl PUBLIC 
    ${SXPLAYER_LIBRARIES}
    ${NODEGL_NGFX_BACKEND_LIBRARIES}
    ${NODEGL_GL_BACKEND_LIBRARIES}
    ${NODEGL_VK_BACKEND_LIBRARIES}
    ${SHADER_TOOLS_LIBRARIES}
)

target_link_directories(nodegl PUBLIC 
    ${NODEGL_VK_BACKEND_LIBRARY_DIRS}
)

target_include_directories(nodegl PUBLIC
    .
    src
    tools/capture
    ${SXPLAYER_INCLUDE_DIRS}
    ${VULKANSDK_INCLUDE_DIRS}
    ${OPENGL_INCLUDE_DIR}
    ${NGFX_INCLUDE_DIRS}
    ${SHADER_TOOLS_INCLUDE_DIRS}
    ${JSON_INCLUDE_DIRS}
    ${RENDERDOC_INCLUDE_DIRS}
)
